# restate-yt-dlp

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  compose.yaml  devenv.nix  docker-entrypoint.sh  justfile  pyproject.toml
.github/: dependabot.yaml
.github/actions/devenv/: action.yaml
.github/workflows/: analysis-scorecard.yaml  ci-nix.yaml  ci.yaml  release.yaml
etc/mc/: config.json
src/: logger.py  main.py  params.py  progress.py
src/restate_yt_dlp/: __init__.py  downloader.py  executor.py  options.py  options2.py  progress.py  restate.py  run.py  utils.py
tests/: options_test.py
